# safemic

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  DOLT_REMOTE.md  LICENSE  README.md  flosgthml4ajptd5ojjkiiqpjm5n3dsh.darc  lefthook.yaml  manifest  mise.toml  vrpcsdd1tdpaleac6fvcccdobdnna8n5
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.claude/skills/loops/: SKILL.md
.claude/skills/loops/references/: dogfood-history.md  magick-ssim-quick-reference.md
.claude/skills/loops/scripts/: gate-about.sh  gate-settings.sh
.dispatch/: state.json
.github/workflows/: audit.yaml  release.yaml
docs/adr/: 0001-native-adaptive-appearance.md
openspec/changes/homebrew-cask-distribution/: design.md  proposal.md  tasks.md
openspec/changes/homebrew-cask-distribution/specs/homebrew-distribution/: spec.md
packaging/homebrew/: safemic.rb.tmpl
src/: about.rs  config.rs  event_loop.rs  icons.rs  launch_at_login.rs  main.rs  mic.rs  popup.rs  popup_content.rs  settings.rs  settings_window.rs  shortcut_recorder.rs  shortcuts.rs  tray.rs  ui.rs  utils.rs
tools/about-preview/: Cargo.toml  build.rs  iterate.sh
tools/about-preview/src/: main.rs
tools/popup-preview/: Cargo.toml  iterate.sh
tools/popup-preview/src/: main.rs
tools/settings-preview/: Cargo.toml  HANDOFF.md  iterate.sh
tools/settings-preview/src/: main.rs
